# oi.client.rgbd.libfreenect

./: CMakeLists.txt  README.md
cmake_modules/: FindFreenect.cmake
headers/: LibFreenectStreamer.hpp
src/: LibFreenectStreamer.cpp  main.cpp
